// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot tests renders with disabled prop 1`] = `
<div>
  <button
    class="bg-teal-400 hover:bg-teal-500 active:bg-teal-400 text-white text-sm sm:text-base py-2 px-5 sm:py-2.5 sm:px-7 rounded transition-colors disabled:opacity-70"
    disabled=""
  >
    Click Me
  </button>
</div>
`;

exports[`Button snapshot tests renders with expected children and default props 1`] = `
<div>
  <button
    class="bg-teal-400 hover:bg-teal-500 active:bg-teal-400 text-white text-sm sm:text-base py-2 px-5 sm:py-2.5 sm:px-7 rounded transition-colors disabled:opacity-70"
  >
    Click Me
  </button>
</div>
`;

exports[`Button snapshot tests renders with isLoading prop 1`] = `
<div>
  <button
    class="bg-teal-400 hover:bg-teal-500 active:bg-teal-400 text-white text-sm sm:text-base py-2 px-5 sm:py-2.5 sm:px-7 rounded transition-colors disabled:opacity-70"
    disabled=""
  >
    loading...
  </button>
</div>
`;

exports[`Button snapshot tests renders with onClick prop 1`] = `
<div>
  <button
    class="bg-teal-400 hover:bg-teal-500 active:bg-teal-400 text-white text-sm sm:text-base py-2 px-5 sm:py-2.5 sm:px-7 rounded transition-colors disabled:opacity-70"
  >
    Click Me
  </button>
</div>
`;

exports[`Button snapshot tests renders with specified custom className 1`] = `
<div>
  <button
    class="bg-teal-400 hover:bg-teal-500 active:bg-teal-400 text-white text-sm sm:text-base py-2 px-5 sm:py-2.5 sm:px-7 rounded transition-colors disabled:opacity-70 custom-class"
  >
    Click Me
  </button>
</div>
`;
